tests/semantic_cases/invalid/typed_assignment_real_to_integer.ob0
(* INVALID: typed assignment uses REAL value for INTEGER target *)
MODULE Main;
VAR src: REAL;
VAR x: INTEGER;
BEGIN
  x := src
END Main.
